tests/codegen/fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.rs:5:1
  |
5 | struct Scalar(i32, i32);
  | ^^^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/scalar/derive_input/attr_transparent_multiple_unnamed_fields.rs:4:3
  |
4 | #[graphql(transparent)]
  |   ^^^^^^^
